--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-**/node_modules/*
-**/dist/*
-
 # Created by https://www.gitignore.io/api/node,bower,osx,linux,windows,dropbox,sass,less,grunt,sublimetext,code
 
 ### Node ###
@@ -119,7 +116,7 @@ $RECYCLE.BIN/
 
 ### grunt ###
 # Grunt usually compiles files inside this directory
-dist/
+# dist/
 
 # Grunt usually preprocesses files such as coffeescript, compass... inside the .tmp directory
 .tmp/
